# screenpipe

./: .gitignore  .tmp_show.ps1  Cargo.toml  HEALTH_OUTPUT.txt  README-ja.md  README-zh_CN.md  README.md  TESTING.md  latest.json  sp_health_output.txt
.github/workflows/: build-enterprise-windows.yml  ci.yml  e2e-test.yml  e2e-windows.yml  eval-diarization.yml  gitleaks.yml  linux-integration-test.yml  release-app.yml  release-cli.yml  release-enterprise-windows.yml  release-enterprise.yml  release-mcp.yml  sync-skills.yml  test-frontend.yml  windows-integration-test.yml  windows-longevity-test.yml
apps/screenpipe-app-tauri/: .gitignore  package.json  vitest.config.ts
apps/screenpipe-app-tauri/app/: globals.css  layout.tsx  providers.tsx
apps/screenpipe-app-tauri/components/: app-sidebar.tsx  browser-sidebar.tsx  chat-sidebar.tsx  cli-command-dialog.tsx  conversation-bubble.tsx  deeplink-handler.tsx  enterprise-locked-setting.tsx  home-stats-badge.tsx  notification-bell.tsx  notification-handler.tsx  pipe-store.tsx  standalone-chat.tsx  (+4 more)
benchmarks/parakeet-bench/: Cargo.toml
benchmarks/parakeet-bench/src/: main.rs
crates/screenpipe-a11y/: Cargo.toml
crates/screenpipe-audio/: Cargo.toml  build.rs
crates/screenpipe-audio-eval/: Cargo.toml
crates/screenpipe-connect/: Cargo.toml
crates/screenpipe-core/: Cargo.toml
crates/screenpipe-engine/: Cargo.toml  build.rs
crates/screenpipe-secrets/: Cargo.toml
docs/: ENTERPRISE-WINDOWS.md
ee/desktop-rust/: enterprise_policy.rs
screenpipe-vision/: Cargo.toml
scripts/: enrich-openapi.py  update-openapi.sh
(+405 files in other folders)
