[package]
name = "parakeet-bench"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
audiopipe = { git = "https://github.com/screenpipe/audiopipe.git", rev = "123212e", default-features = false, features = ["parakeet"] }
ort = { version = "=2.0.0-rc.6", features = ["download-binaries", "copy-dylibs"] }

[features]
default = []
directml = ["audiopipe/directml"]
